--- a/orku.be/src/components/Navbar.module.css
+++ b/orku.be/src/components/Navbar.module.css
@@ -18,7 +18,7 @@
   backdrop-filter: blur(6px);
   opacity: 0;
   transform: translateY(-20px);
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, opacity 0.5s ease-in-out;
 }
 
 /* Navbar apparaît au scroll */
@@ -33,7 +33,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.7s ease-in-out;
 }
 
 /* Effet hover sur le logo */
@@ -41,7 +41,7 @@
   transform: scale(1.2);
 }
 
-/* Texte "Own Your Energy" */
+/* Texte "Own Your Energy" avec effet pop-up */
 .logoText {
   font-size: 0.9rem;
   font-family: 'Karla', sans-serif;
@@ -49,9 +49,10 @@
   color: #EE7042 !important;
   background-color: transparent !important;
   opacity: 0;
-  transform: scale(0.8);
+  transform: scale(0.5);
+  /* Commence plus petit pour un effet pop-up */
   transform-origin: center;
-  transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+  transition: opacity 0.9s ease-in-out, transform 0.9s ease-in-out;
   z-index: 1000;
   position: relative;
 }
@@ -139,7 +140,7 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 60px;
+    top: 70px;
     /* Décalage pour éviter la superposition */
     right: 10px;
     width: 200px;
